--- a/Proj_DeHamer.html
+++ b/Proj_DeHamer.html
@@ -301,7 +301,7 @@
       <!--=================Contact==========================-->
       <div class="section contact">
         <h2 id="contact">Contact</h2>
-        <p>If you have any questions, please contact Chongyi Li at <strong>lichongyi25@gmail.com</strong>.</p>
+        <p>If you have any questions, please contact Chongyi Li at <strong>lichongyi25@gmail.com</strong> or Chunle Guo at <strong>guochunle@nankai.edu.cn</strong>.</p>
       </div>
 
 
