--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 	<br />
 	
 	  <div class="publication">
-            <img src="./logo/logo_TCSVT2022.png" class="publogo" width="300 px">
+            <img src="./logo/logo_TCSVT2022.jpg" class="publogo" width="300 px">
             <p> 
                 <strong>
                     <a href="">Underwater Image Enhancement Quality Evaluation: Benchmark Dataset and Objective Metric</a>
