--- a/index.html
+++ b/index.html
@@ -286,7 +286,6 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
           <br>
 	<br />
 	<br />
-	
 	  <div class="publication">
             <img src="./logo/logo_TCSVT2022.jpg" class="publogo" width="300 px">
             <p> 
@@ -300,7 +299,30 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                 <br>
                 <span class="links">
                     <a href="https://ieeexplore.ieee.org/abstract/document/9749233">PDF</a>| 
-		    <a href="hhttps://github.com/yia-yuese/SAUD-Dataset">Code&Dataset</a>| 	
+		    <a href="hhttps://github.com/yia-yuese/SAUD-Dataset">Code&Dataset</a> 	
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br />
+	<br />
+	
+	  <div class="publication">
+            <img src="./logo/logo_TCYB2022.jpg" class="publogo" width="300 px">
+            <p> 
+                <strong>
+                    <a href="">Global-and-Local Collaborative Learning for Co-Salient Object Detection</a>
+                </strong>
+		  <br> 
+		<em><b>TCYB 2022</b></em>
+                <br> 
+              Runmin Cong, Ning Yang, and <b>Chongyi Li<sup>+</sup></b>, Huazhu Fu, Yao Zhao, Qingming Huang, and Sam Kwong.
+                <br>
+                <span class="links">
+                    <a href="https://arxiv.org/pdf/2204.08917.pdf">PDF</a>| 
+		    <a href="https://rmcong.github.io/proj_GLNet.html/">Project Page</a>| 	
+                    <a href="https://github.com/rmcong/GLNet_TCYB2022">Code</a>|	
                 </span>
             </p>
           </div>
@@ -363,7 +385,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="https://ieeexplore.ieee.org/document/9369102">Learning to Enhance Low-Light Image via Zero-Reference Deep Curve Estimation</a>
                 </strong>
 		  <br>
-		<em><b>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2021</b></em>
+		<em><b>TPAMI, 2021</b></em>
                 <br>
                <b>Chongyi Li</b>, Chunle Guo, Chen Change Loy.
                 <br>
@@ -386,7 +408,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="">Underwater Image Enhancement via Medium Transmission-Guided Multi-Color Space Embedding</a>
                 </strong>
 		  <br> 
-		<em><b>IEEE Transactions on Image Processing (TIP), 2021</b></em>
+		<em><b>TIP, 2021</b></em>
                 <br> 
                <b>Chongyi Li</b>, Saeed Anwar, Junhui Hou, Runmin Cong, Chunle Guo, Wenqi Ren.
                 <br>
@@ -477,7 +499,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="https://ieeexplore.ieee.org/document/8917818">An Underwater Image Enhancement Benchmark Dataset and Beyond</a>
                 </strong>
 		    <br>
-		 <em><b>IEEE Transactions on Image Processing (TIP), 2020</b></em>
+		 <em><b>TIP, 2020</b></em>
                 <br>
                 <b>Chongyi Li</b>, Chunle Guo, Wenqi Ren, Runmin Cong, Junhui Hou, Sam Kwong, Dacheng Tao.
                 <br>
@@ -501,7 +523,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="https://ieeexplore.ieee.org/document/8793227">Nested Network With Two-Stream Pyramid for Salient Object Detection in Optical Remote Sensing Images</a>
                 </strong>
 		     <br>
-		 <em><b>IEEE Trans Geosci Remote Sens (TGRS), 2020</b></em>
+		 <em><b>TGRS, 2020</b></em>
                 <br>
                 <b>Chongyi Li</b>, Runmin Cong, Junhui Hou, Sanyi Zhang, Yue Qian, Sam Kwong.
                 <br>
@@ -525,7 +547,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="https://www.sciencedirect.com.remotexs.ntu.edu.sg/science/article/pii/S0031320319303401">Underwater Scene Prior Inspired Deep Underwater Image and Video Enhancement</a>
                 </strong>
 		     <br>
-		 <em><b>Pattern Recognition (PR), 2020</b></em>
+		 <em><b>PR, 2020</b></em>
                 <br>
                 <b>Chongyi Li</b>, Saeed Anwar, Fatih Porikli.
                 <br>
@@ -548,7 +570,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="https://ieeexplore.ieee.org.remotexs.ntu.edu.sg/stamp/stamp.jsp?tp=&arnumber=8998588">ASIF-Net: Attention Steered Interweave Fusion Network for RGB-D Salient Object Detection</a>
                 </strong>
 		     <br>
-		 <em><b>IEEE Transactions on Cybernetics (TCyb), 2020</b></em>
+		 <em><b>TCYB, 2020</b></em>
                 <br>
                 <b>Chongyi Li</b>, Runmin Cong, Sam Kwong, Junhui Hou, Huazhu Fu, Guopu Zhu, Dingwen Zhang, Qiangming Huang.
                 <br>
@@ -593,7 +615,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9292434">Dense attention fluid network for salient object detection in optical remote sensing images</a>
                 </strong>
 		     <br>
-		 <em><b>IEEE Transactions on Image Processing (TIP), 2020</b></em>
+		 <em><b>TIP, 2020</b></em>
                 <br>
                 Qijian Zhang, Runmin Cong, <b>Chongyi Li</b>, Ming-Ming Cheng, Yuming Fang, Xiaochun Cao, Yao Zhao, and Sam Kwong.
                 <br>
@@ -617,7 +639,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="https://ieeexplore.ieee.org/document/8579111">Hierarchical Features Driven Residual Learning for Depth Map Super-Resolution</a>
                 </strong>
 		     <br>
-		<em><b>IEEE Transactions on Image Processing (TIP), 2019</b></em>
+		<em><b>TIP, 2019</b></em>
                 <br>
                 Chunle Guo, <b>Chongyi Li<sup>+</sup></b>, Jichang Guo, Runmin Cong, Huazhu Fu, Ping Han.
                 <br>
@@ -640,7 +662,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="https://ieeexplore.ieee.org/document/8792133">PDR-Net: Perception-Inspired Single Image Dehazing Network With Refinement</a>
                 </strong>
 		     <br>
-		<em><b>IEEE Transactions on Multimedia  (TMM), 2019</b></em>
+		<em><b>TMM, 2019</b></em>
                 <br>
                 <b>Chongyi Li</b>, Chunle Guo, Jichang Guo, Ping Han, Huazhu Fu, Runmin Cong.
                 <br>
@@ -664,7 +686,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                     <a href="https://ieeexplore.ieee.org/document/7574330">Underwater Image Enhancement by Dehazing with Minimum Information Loss and Histogram Distribution Prior</a>
                 </strong>
 		     <br>
-		<em><b>IEEE Transactions on Image Processing (TIP), 2016</b></em>
+		<em><b>TIP, 2016</b></em>
                 <br>
                 <b>Chongyi Li</b>, Jichang Guo, Runmin Cong, Yanwei Pang, Bo Wang.
                 <br>
