--- a/index.html
+++ b/index.html
@@ -286,6 +286,30 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
           <br>
 	<br />
 	<br />
+	
+		  <div class="publication">
+           <img src="logo/TCYB2022 _input.jpg" onmouseover="this.src='logo/TCYB2022_output.jpg';" onmouseout="this.src='logo/TCYB2022 _input.jpg';" class="publogo"  width="300 px">
+            <p> 
+                <strong>
+                    <a href="">Global-and-Local Collaborative Learning for Co-Salient Object Detection</a>
+                </strong>
+		  <br> 
+		<em><b>TCYB 2022</b></em>
+                <br> 
+              Runmin Cong, Ning Yang, and <b>Chongyi Li<sup>+</sup></b>, Huazhu Fu, Yao Zhao, Qingming Huang, and Sam Kwong.
+                <br>
+                <span class="links">
+                    <a href="https://arxiv.org/pdf/2204.08917.pdf">PDF</a>| 
+		    <a href="https://rmcong.github.io/proj_GLNet.html/">Project Page</a>| 	
+                    <a href="https://github.com/rmcong/GLNet_TCYB2022">Code</a>|	
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br />
+	<br />
+	
 	  <div class="publication">
             <img src="./logo/logo_TCSVT2022.jpg" class="publogo" width="300 px">
             <p> 
@@ -308,28 +332,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 	<br />
 	<br />
 	
-	  <div class="publication">
-            <img src="./logo/logo_TCYB2022.jpg" class="publogo" width="300 px">
-            <p> 
-                <strong>
-                    <a href="">Global-and-Local Collaborative Learning for Co-Salient Object Detection</a>
-                </strong>
-		  <br> 
-		<em><b>TCYB 2022</b></em>
-                <br> 
-              Runmin Cong, Ning Yang, and <b>Chongyi Li<sup>+</sup></b>, Huazhu Fu, Yao Zhao, Qingming Huang, and Sam Kwong.
-                <br>
-                <span class="links">
-                    <a href="https://arxiv.org/pdf/2204.08917.pdf">PDF</a>| 
-		    <a href="https://rmcong.github.io/proj_GLNet.html/">Project Page</a>| 	
-                    <a href="https://github.com/rmcong/GLNet_TCYB2022">Code</a>|	
-                </span>
-            </p>
-          </div>
-          <br>
-          <br>
-	<br />
-	<br />
+
 	
 	  <div class="publication">
             <img src="./logo/survey.png" class="publogo" width="300 px">
