--- a/index.html
+++ b/index.html
@@ -287,7 +287,8 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 	<br />
 	<br />
 	
-		  <div class="publication">
+	
+<div class="publication">
            <img src="logo/TCYB2022 _input.jpg" onmouseover="this.src='logo/TCYB2022_output.jpg';" onmouseout="this.src='logo/TCYB2022 _input.jpg';" class="publogo"  width="300 px">
             <p> 
                 <strong>
@@ -301,7 +302,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                 <span class="links">
                     <a href="https://arxiv.org/pdf/2204.08917.pdf">PDF</a>| 
 		    <a href="https://rmcong.github.io/proj_GLNet.html/">Project Page</a>| 	
-                    <a href="https://github.com/rmcong/GLNet_TCYB2022">Code</a>|	
+                    <a href="https://github.com/rmcong/GLNet_TCYB2022">Code</a>	
                 </span>
             </p>
           </div>
@@ -309,6 +310,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
           <br>
 	<br />
 	<br />
+	
 	
 	
 	  <div class="publication">
