--- a/index.html
+++ b/index.html
@@ -326,7 +326,8 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                 <br>
                 <span class="links">
                     <a href="https://ieeexplore.ieee.org/abstract/document/9749233">PDF</a>| 
-		    <a href="hhttps://github.com/yia-yuese/SAUD-Dataset">Code&Dataset</a> 	
+		    <a href="hhttps://github.com/yia-yuese/SAUD-Dataset">Code</a>| 
+		    <a href="hhttps://github.com/yia-yuese/SAUD-Dataset">Dataset</a> 
                 </span>
             </p>
           </div>
