--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Recent News:</h2>
  
 <ul>
-<li> 2022/05 --Our team Feedforward won the <strong>second runner-up (3/317)<strong> in <a href="https://studio.brainpp.com/competition/5?name=2022%20MegCup%20%E7%82%BC%E4%B8%B9%E5%A4%A7%E8%B5%9B&tab=rank" target="_blank"><font color="#ff0000">MegCup Efficient Model for Blind Denoising. Congrats to Xin Jin, Ruiqi Wu, and Zhen Li for winning the 10K CNY cash prize. The code is publicly available <a href="https://github.com/Srameo/megcup-feedforward" target="_blank"><font color="#ff0000">here.</font></a></li>
+<li> 2022/05 --Our team Feedforward won the <strong>second runner-up (3/317)<strong> in <a href="https://studio.brainpp.com/competition/5?name=2022%20MegCup%20%E7%82%BC%E4%B8%B9%E5%A4%A7%E8%B5%9B&tab=rank" target="_blank"><font color="#ff0000">MegCup Efficient Model for Blind Denoising</font></a>. Congrats to Xin Jin, Ruiqi Wu, and Zhen Li for winning the 10K CNY cash prize. The code is publicly available <a href="https://github.com/Srameo/megcup-feedforward" target="_blank"><font color="#ff0000">here.</font></a></li>
 <li> 2022/04 --One paper has been accepted by <strong>TCYB</strong></li>
 <li> 2022/03 --Our ECCV 2022 Workshop coupled with challenges: <strong>Mobile Intelligent Photography & Imaging</strong> has been accepted. <a href="http://mipi-challenge.org/" target="_blank"><font color="#ff0000">(http://mipi-challenge.org/)</font></a></li>
 <li> 2022/03 --One paper has been accepted by <strong>TCSVT</strong></li>
