--- a/proj_MMLE.html
+++ b/proj_MMLE.html
@@ -4,7 +4,7 @@
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <title>Underwater Image Enhancement via Minimal Color Loss and Locally Adaptive Contrast Enhancement</title>
-      <link href="style.css" rel="stylesheet" type="text/css">
+      <link href="pics/style.css" rel="stylesheet" type="text/css">
       <meta name="description" content="Project page for &#39;Underwater Image Enhancement via Minimal Color Loss and Locally Adaptive Contrast Enhancement.&#39;">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
       <style>
