--- a/proj_MMLE.html
+++ b/proj_MMLE.html
@@ -4,7 +4,7 @@
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <title>Underwater Image Enhancement via Minimal Color Loss and Locally Adaptive Contrast Enhancement</title>
-      <link href="pics/style.css" rel="stylesheet" type="text/css">
+      <link href="MLLE_files/pics/style.css" rel="stylesheet" type="text/css">
       <meta name="description" content="Project page for &#39;Underwater Image Enhancement via Minimal Color Loss and Locally Adaptive Contrast Enhancement.&#39;">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
       <style>
@@ -32,19 +32,19 @@
          <div id="imageCarousel" class="carousel slide" data-ride="carousel" data-interval="0">
             <div class="carousel-inner">
                <div class="carousel-item active">
-                  <img class="d-block w-100" src="pics/figure3.png" alt="First slide" style="margin-top: 30px;">
+                  <img class="d-block w-100" src="MLLE_files/pics/figure3.png" alt="First slide" style="margin-top: 30px;">
                </div>
                <div class="carousel-item">
-                  <img class="d-block w-100" src="pics/figure4.png" alt="First slide" style="margin-top: 30px;">
+                  <img class="d-block w-100" src="MLLE_files/pics/figure4.png" alt="First slide" style="margin-top: 30px;">
                </div>
                 <div class="carousel-item">
-                  <img class="d-block w-100" src="pics/figure1.png" alt="First slide" style="margin-top: 30px;">
+                  <img class="d-block w-100" src="MLLE_files/pics/figure1.png" alt="First slide" style="margin-top: 30px;">
                </div>
                <div class="carousel-item">
                   <img class="d-block w-100" src="pics/figure2.png" alt="First slide"style="margin-top: 30px;">
                </div>
                <div class="carousel-item">
-                  <img class="d-block w-100" src="pics/figure5.png" alt="First slide"style="margin-top: 30px;">
+                  <img class="d-block w-100" src="MLLE_files/pics/figure5.png" alt="First slide"style="margin-top: 30px;">
                </div>
             </div>
             <a class="carousel-control-prev" href="#imageCarousel" role="button" data-slide="prev">
@@ -68,17 +68,17 @@
             <div class="carousel-inner">
                <div class="carousel-item active">
                   <video class="img-fluid" autoplay loop muted>
-                     <source src="videos/videoplayback1.mp4" type="video/mp4">
+                     <source src="MLLE_files/videos/videoplayback1.mp4" type="video/mp4">
                   </video>
                </div>
                <div class="carousel-item">
                   <video class="img-fluid" autoplay loop muted>
-                     <source src="videos/videoplayback2.mp4" type="video/mp4">
+                     <source src="MLLE_files/videos/videoplayback2.mp4" type="video/mp4">
                   </video>
                </div>
                <div class="carousel-item">
                   <video class="img-fluid" autoplay loop muted>
-                     <source src="videos/videoplayback3.mp4" type="video/mp4">
+                     <source src="MLLE_files/videos/videoplayback3.mp4" type="video/mp4">
                   </video>
                </div>
             </div>
@@ -116,14 +116,14 @@
          <p style="margin-top: 0px;">
             Our method as a pre-processing step can imporve the performance of underwater image segmentation, underwater image keypoints detection, and underwater image saliency detection.
          </p>
-         <div align="center"><img style="padding: 0; display: block; margin: 0 auto; max-height: 100%; max-width: 100%;" src="pics/application.png" alt="" width="1000" /></div>
+         <div align="center"><img style="padding: 0; display: block; margin: 0 auto; max-height: 100%; max-width: 100%;" src="MLLE_files/pics/application.png" alt="" width="1000" /></div>
 
          <br />
          <p class="section"><b>Generalization</b></p>
          <p style="margin-top: 0px;">
           Our method can be applied to foggy and sandstorm image enhancement without any parameter finetuning.
          </p>
-         <div align="center"><img style="padding: 0; display: block; margin: 0 auto; max-height: 100%; max-width: 100%;" src="pics/generalization.png" alt="" width="1000" /></div>
+         <div align="center"><img style="padding: 0; display: block; margin: 0 auto; max-height: 100%; max-width: 100%;" src="MLLE_files/pics/generalization.png" alt="" width="1000" /></div>
 
 
 
@@ -132,7 +132,7 @@
          <table  border="0">
             <tbody>
                <tr>
-                  <td height="100"><a href="paper.pdf" target="_blank" rel="noopener noreferrer"><img src="./pics/paper_cover.png" alt="" width="140" height="167"></a></td>
+                  <td height="100"><a href="paper.pdf" target="_blank" rel="noopener noreferrer"><img src="MLLE_files/pics/paper_cover.png" alt="" width="140" height="167"></a></td>
 				   <td height="100">&nbsp;&nbsp;&nbsp;&nbsp;</td>
                   <td width="750">
                      <p><b>Underwater Image Enhancement via Minimal Color Loss and Locally Adaptive Contrast Enhancement</b><br>
@@ -149,7 +149,7 @@
          <table width="587" height="136" border="0">
             <tbody>
                <tr>
-                  <td width="180"><img src="./pics/paper_cover.png" alt="" height="150"></td>
+                  <td width="180"><img src="MLLE_files//pics/paper_cover.png" alt="" height="150"></td>
                   <td align="left">
                      [<a href="" target="_blank" rel="noopener noreferrer">supplementary material</a>]
                   </td>
