--- a/proj_MMLE.html
+++ b/proj_MMLE.html
@@ -41,7 +41,7 @@
                   <img class="d-block w-100" src="MLLE_files/pics/figure1.png" alt="First slide" style="margin-top: 30px;">
                </div>
                <div class="carousel-item">
-                  <img class="d-block w-100" src="pics/figure2.png" alt="First slide"style="margin-top: 30px;">
+                  <img class="d-block w-100" src="MLLE_files/pics/figure2.png" alt="First slide"style="margin-top: 30px;">
                </div>
                <div class="carousel-item">
                   <img class="d-block w-100" src="MLLE_files/pics/figure5.png" alt="First slide"style="margin-top: 30px;">
@@ -109,7 +109,7 @@
          <p style="margin-top: 0px;">
             In our locally adaptive color correction, the detail image, attenuation image, and color transfer image are first derived from the input image, in which the color transfer image is obtained using the minimum color loss principle. Then, these three images are fused using the maximum attenuation map-guided fusion strategy to get the color corrected image and a complementary relationship is established among them. In our locally adaptive contrast enhancement, it first produces the contrast-enhanced image from the color corrected image using the locally adaptive contrast enhancement strategy, while a color balance strategy is used to further correct the color.
          </p>
-         <div align="center"><img style="padding: 0; display: block; margin: 0 auto; max-height: 70%; max-width: 70%;" src="pics/framework.png" alt="" width="800" /></div>
+         <div align="center"><img style="padding: 0; display: block; margin: 0 auto; max-height: 70%; max-width: 70%;" src="MLLE_files/pics/framework.png" alt="" width="800" /></div>
          <br />
          
          <p class="section"><b>Application</b></p>
