--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
               <b>Chongyi Li</b>, Shangchen Zhou, Ruicheng Feng, Jun Jiang, Wenxiu Sun, Qingyu Yang, Qingpeng Zhu, Chen Change Loy, and Jinwei Gu.
                 <br>
                 <span class="links">
-		      <a href="http://mipi-challenge.org/">Website	
+		      <a href="http://mipi-challenge.org/">Website</a>	
 		      
                 </span>
             </p>
