--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@ research and develop advanced deep learning algorithms for image and video enhan
 <br>
 <hr />
 
+<!--
 <h2>
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Low-Light Image Enhancement Platform: LLIE-Platform</h2>  
   
@@ -199,7 +200,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 </ul>
 <br>
 <hr />
-
+-->
 <!--
 <h2>
 <a id="new-page" class="anchor" href="#new-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Call for Papers:</h2>  
@@ -218,7 +219,29 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 <div class="container">
 <h2><a id="reaserch-page" class="anchor" href="#reaserch-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects:</h2>
         <br>
-
+	  <div class="publication">
+            <img src="logo/platform1.jpg" onmouseover="this.src='logo/platform2.jpg';" onmouseout="this.src='logo/platform1.jpg';" class="publogo"  width="300 px">
+            <p> 
+                <strong>
+                    <a href="">Low-Light Image Enhancement Online Platform</a>
+                </strong>
+		  <br> 
+		<em><b>LLIE-Platform</b></em>
+                <br> 
+              Different deep models may be implemented in different platforms. As a result, different algorithms demand different configurations, GPU versions, and hardware specifications. Such requirements are prohibitive to many researchers, especially for beginners who are new to this area and may not even have GPU resources.
+                <br>
+                <span class="links">
+		      <a href="http://mc.nankai.edu.cn/ll/">Website</a>	
+		      
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br />
+	<br />
+	
+	
 	  <div class="publication">
            <img src="./logo/MIPI.png" class="publogo" width="300 px">
             <p> 
