--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 <h2><a id="reaserch-page" class="anchor" href="#reaserch-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects:</h2>
         <br>
 	  <div class="publication">
-            <img src="logo/platform1.jpg" onmouseover="this.src='logo/platform2.jpg';" onmouseout="this.src='logo/platform1.jpg';" class="publogo"  width="300 px">
+            <img src="logo/plateform1.jpg" onmouseover="this.src='logo/plateform2.jpg';" onmouseout="this.src='logo/plateform1.jpg';" class="publogo"  width="300 px">
             <p> 
                 <strong>
                     <a href="">Low-Light Image Enhancement Online Platform</a>
