--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 		  <br> 
 		<em><b>LLIE-Platform</b></em>
                 <br> 
-              Different deep models may be implemented in different platforms. As a result, different algorithms demand different configurations, GPU versions, and hardware specifications. Such requirements are prohibitive to many researchers, especially for beginners who are new to this area and may not even have GPU resources.
+              Different algorithms demand different configurations, GPU versions, and hardware specifications that are prohibitive to beginners who are new to this area and may not even have GPU resources. We maintain an online plateform.
                 <br>
                 <span class="links">
 		      <a href="http://mc.nankai.edu.cn/ll/">Website</a>	
