--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
                 <strong>
                     <a href="">Low-Light Image Enhancement Online Platform</a>
                 </strong> 
-              Different algorithms demand various configurations, GPU versions, and hardware specifications that are prohibitive to beginners who are new to this area and may not even have GPU resources. We maintain an online plateform.
+              Different algorithms demand various configurations, GPU versions, and hardware specifications that are prohibitive to beginners who are new to this area and may not even have GPU resources. Hence, we contribute an online plateform.
                 <br>
                 <span class="links">
 		      <a href="http://mc.nankai.edu.cn/ll/">Website</a>	
