--- a/index.html
+++ b/index.html
@@ -220,6 +220,31 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 <div class="container">
 <h2><a id="reaserch-page" class="anchor" href="#reaserch-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects:</h2>
         <br>
+	
+	  <div class="publication">
+            <img src="logo/Cudi.jpg" onmouseover="this.src='logo/Cudi.jpg';" onmouseout="this.src='logo/Cudi.jpg';" class="publogo"  width="300 px">
+            <p> 
+                <strong>
+                    <a href="">CuDi: Curve Distillation for Efficient and Controllable Exposure Adjustment</a>
+                </strong>
+		  <br> 
+		<em><b>2022</b></em>
+                <br> 
+              <b>Chongyi Li</b>, Chunle Guo, Ruicheng Feng, Shangchen Zhou, and Chen Change Loy.
+                <br>
+                <span class="links">
+                    <a href="">PDF</a>| 
+		    <a href="">Project Page</a>| 	
+                    <a href="">Code</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br />
+	<br />
+	
+	
 	  <div class="publication">
             <img src="logo/plateform1.jpg" onmouseover="this.src='logo/plateform2.jpg';" onmouseout="this.src='logo/plateform1.jpg';" class="publogo"  width="300 px">
             <p> 
