--- a/index.html
+++ b/index.html
@@ -244,6 +244,28 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 	<br />
 	<br />
 	
+	  <div class="publication">
+            <img src="logo/BeautyREC.jpg" onmouseover="this.src='logo/BeautyREC.jpg';" onmouseout="this.src='logo/BeautyREC.jpg';" class="publogo"  width="300 px">
+            <p> 
+                <strong>
+                    <a href="">BeautyREC: Robust, Efficient, and Content-preserving Makeup Transfer</a>
+                </strong>
+		  <br> 
+		<em><b>2022</b></em>
+                <br> 
+              Qixin Yan, Chunle Guo, Chen Change Loy, and <b>Chongyi Li</b>.
+                <br>
+                <span class="links">
+                    <a href="">PDF</a>| 
+		    <a href="">Project Page</a>| 	
+                    <a href="">Code</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br />
+	<br />
 	
 	  <div class="publication">
             <img src="logo/plateform1.jpg" onmouseover="this.src='logo/plateform2.jpg';" onmouseout="this.src='logo/plateform1.jpg';" class="publogo"  width="300 px">
