--- a/index.html
+++ b/index.html
@@ -267,6 +267,29 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 	<br />
 	<br />
 
+   <div class="publication">
+            <img src="logo/R2D2_input.jpg" onmouseover="this.src='logo/R2D2_ours.jpg';" onmouseout="this.src='logo/R2D2_input.jpg';" class="publogo"  width="300 px">
+            <p> 
+                <strong>
+                    <a href="">Revisiting RAW Data for Seeing in the Dark</a>
+                </strong>
+		  <br> 
+		<em><b>2022</b></em>
+                <br> 
+              Linghao Han, Xin Jin, Zhen Li, Chunle Guo, Zhi Chai, and <b>Chongyi Li</b>.
+                <br>
+                <span class="links">
+                    <a href="">PDF</a>| 
+		    <a href="">Project Page</a>| 	
+                    <a href="">Code</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br />
+	<br />
+	
 	
 	  <div class="publication">
             <img src="logo/plateform1.jpg" onmouseover="this.src='logo/plateform2.jpg';" onmouseout="this.src='logo/plateform1.jpg';" class="publogo"  width="300 px">
