--- a/index.html
+++ b/index.html
@@ -290,6 +290,29 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 	<br />
 	<br />
 	
+ <div class="publication">
+            <img src="logo/LEDNet_real_input1.jpg" onmouseover="this.src='logo/LEDNet_real_output1.jpg';" onmouseout="this.src='logo/LEDNet_real_input1.jpg';" class="publogo"  width="300 px">
+            <p> 
+                <strong>
+                    <a href="">LEDNet: Joint Low-light Enhancement and Deblurring in the Dark</a>
+                </strong>
+		  <br> 
+		<em><b>2022</b></em>
+                <br> 
+               Shangchen Zhou, <b>Chongyi Li</b>, Chen Change Loy.
+                <br>
+                <span class="links">
+                    <a href="https://arxiv.org/pdf/2202.03373.pdf">PDF</a>| 
+		    <a href="https://shangchenzhou.com/projects/LEDNet/">Project Page</a>| 	
+                    <a href="https://shangchenzhou.com/projects/LEDNet//">Code</a>|
+		    <a href="https://shangchenzhou.com/projects/LEDNet//">Dataset</a>
+                </span>
+            </p>
+          </div>
+          <br>
+          <br>
+	<br />
+	<br />
 	
 	  <div class="publication">
             <img src="logo/plateform1.jpg" onmouseover="this.src='logo/plateform2.jpg';" onmouseout="this.src='logo/plateform1.jpg';" class="publogo"  width="300 px">
@@ -356,22 +379,23 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 	<br />
 	<br />
 	
-	  <div class="publication">
-            <img src="logo/LEDNet_real_input1.jpg" onmouseover="this.src='logo/LEDNet_real_output1.jpg';" onmouseout="this.src='logo/LEDNet_real_input1.jpg';" class="publogo"  width="300 px">
+
+	 <div class="publication">
+            <video id="vid" muted="muted" width="400" controls= "autoPlay" onended="this.currentTime = 0; this.play();" autoplay="" src="MLLE_files/videos/videoplayback1.mp4"> <source src="images/projects/arXiv 2020 PortraitNeRF.mp4" type="video/mp4">
+</video></td><td align="left">
             <p> 
                 <strong>
-                    <a href="">LEDNet: Joint Low-light Enhancement and Deblurring in the Dark</a>
+                    <a href="">Underwater Image Enhancement via Minimal Color Loss and Locally Adaptive Contrast Enhancement</a>
                 </strong>
 		  <br> 
-		<em><b>2022</b></em>
+		<em><b>TIP 2022</b></em>
                 <br> 
-               Shangchen Zhou, <b>Chongyi Li</b>, Chen Change Loy.
+               Weidong Zhang, Peixian Zhang, Haihan Sun, Guohou Li, Sam Kwong, and <b>Chongyi Li</b>.
                 <br>
                 <span class="links">
-                    <a href="https://arxiv.org/pdf/2202.03373.pdf">PDF</a>| 
-		    <a href="https://shangchenzhou.com/projects/LEDNet/">Project Page</a>| 	
-                    <a href="https://shangchenzhou.com/projects/LEDNet//">Code</a>|
-		    <a href="https://shangchenzhou.com/projects/LEDNet//">Dataset</a>
+                    <a href="">PDF</a>| 
+		    <a href="https://li-chongyi.github.io/proj_MMLE/">Project Page</a>| 	
+                    <a href="/">Code</a>
                 </span>
             </p>
           </div>
@@ -379,7 +403,6 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
           <br>
 	<br />
 	<br />
-	
 	
 <div class="publication">
            <img src="logo/TCYB2022 _input.jpg" onmouseover="this.src='logo/TCYB2022_output.jpg';" onmouseout="this.src='logo/TCYB2022 _input.jpg';" class="publogo"  width="300 px">
