--- a/index.html
+++ b/index.html
@@ -381,8 +381,8 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 	
 
 	 <div class="publication">
-            <video id="vid" muted="muted" width="400" controls= "autoPlay" onended="this.currentTime = 0; this.play();" autoplay="" src="MLLE_files/videos/videoplayback1.mp4"> <source src="images/projects/arXiv 2020 PortraitNeRF.mp4" type="video/mp4">
-</video></td><td align="left">
+            <video id="vid" muted="muted" width="300" controls= "autoPlay" onended="this.currentTime = 0; this.play();" autoplay="" src="MLLE_files/videos/videoplayback1.mp4"> <source src="MLLE_files/videos/videoplayback1.mp4" type="video/mp4">
+</video>
             <p> 
                 <strong>
                     <a href="">Underwater Image Enhancement via Minimal Color Loss and Locally Adaptive Contrast Enhancement</a>
