--- a/proj_MMLE.html
+++ b/proj_MMLE.html
@@ -172,7 +172,7 @@
   @article{MLLE2022,
 	  author    = {Weidong Zhang and Peixian Zhang and Haihan Sun and Guohou Li and Sam Kwong and Chongyi Li},
   	  title     = {Underwater Image Enhancement via Minimal Color Loss and Locally Adaptive Contrast Enhancement},
-	  journal   = {},
+	  journal   = {IEEE Transactions on Image Processing},
 	  year      = {2022},
   }
 			  </pre>
