--- a/proj_MMLE.html
+++ b/proj_MMLE.html
@@ -132,7 +132,7 @@
          <table  border="0">
             <tbody>
                <tr>
-                  <td height="100"><a href="paper.pdf" target="_blank" rel="noopener noreferrer"><img src="MLLE_files/pics/paper_cover.png" alt="" width="140" height="167"></a></td>
+                  <td height="100"><a href="paper.pdf" target="_blank" rel="noopener noreferrer"><img src="MLLE_files/pics/paper_logo.jpg" alt="" width="140" height="167"></a></td>
 				   <td height="100">&nbsp;&nbsp;&nbsp;&nbsp;</td>
                   <td width="750">
                      <p><b>Underwater Image Enhancement via Minimal Color Loss and Locally Adaptive Contrast Enhancement</b><br>
@@ -149,7 +149,7 @@
          <table width="587" height="136" border="0">
             <tbody>
                <tr>
-                  <td width="180"><img src="MLLE_files//pics/paper_cover.png" alt="" height="150"></td>
+                  <td width="180"><img src="MLLE_files//pics/paper_logo.jpg" alt="" height="150"></td>
                   <td align="left">
                      [<a href="" target="_blank" rel="noopener noreferrer">supplementary material</a>]
                   </td>
