--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 	
 
 	 <div class="publication">
-            <video id="vid" constrol muted="muted" width="300"  class="publogo" controls= "autoPlay" onended="this.currentTime = 0; this.play();" autoplay="" src="MLLE_files/videos/videoplayback1.mp4"> <source src="MLLE_files/videos/videoplayback1.mp4" type="video/mp4"></video>
+            <video  muted="muted" width="300"  controls= "autoPlay" onended="this.currentTime = 0; this.play();" autoplay="" src="MLLE_files/videos/videoplayback1.mp4"> <source src="MLLE_files/videos/videoplayback1.mp4" type="video/mp4"></video>
             <p> 
                 <strong>
                     <a href="">Underwater Image Enhancement via Minimal Color Loss and Locally Adaptive Contrast Enhancement</a>
