--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ a, a:visited { color : #0050e7; }
 .publication p { height : 100px; padding-top : 5px;}
 .publication strong a { color : #0000A0; }
 .publication .links { position :relative ; top : 10px }
-.publication .links a { margin-right : 20px; }
+.publication .links a { margin-right : 20px; font-size: 15px; font-weight: normal}
 .codelogo { margin-right : 10px; float : left; border : 0;}
 .code { clear : left; padding-bottom : 10px; vertical-align :middle;} 
 .code .download a { display : block; margin : 0 15px; float : left;}
@@ -381,7 +381,7 @@ If you use this platform, please cite our paper "Low-Light Image and Video Enhan
 	
 
 	 <div class="publication">
-            <video class="publogo"  muted="muted" width="300"  controls= "autoPlay" onended="this.currentTime = 0; this.play();" autoplay="" src="MLLE_files/videos/videoplayback1.mp4"> <source src="MLLE_files/videos/videoplayback1.mp4" type="video/mp4"></video>
+            <video  muted="muted" width="300" class="publogo"   controls= "autoPlay" onended="this.currentTime = 0; this.play();" autoplay="" src="MLLE_files/videos/videoplayback1.mp4"> <source src="MLLE_files/videos/videoplayback1.mp4" type="video/mp4"></video>
             <p> 
                 <strong>
                     <a href="">Underwater Image Enhancement via Minimal Color Loss and Locally Adaptive Contrast Enhancement</a>
